src/tests/testfiles/unary-operators/types-7.txt
Error at 5:5: Incompatible types when assigning to type 'float' from type 'float *'
f = ff;
^
